build_output2.txt
[1/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/HTMLScriptElement.cpp.o
[2/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/HTMLSelectElement.cpp.o
[3/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/HTMLStyleElement.cpp.o
[4/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/HTMLTableCellElement.cpp.o
[5/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/HTMLTableElement.cpp.o
[6/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/HTMLTableRowElement.cpp.o
[7/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/HTMLTableSectionElement.cpp.o
[8/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/HTMLTemplateElement.cpp.o
[9/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/HTMLTextAreaElement.cpp.o
[10/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/HTMLTitleElement.cpp.o
[11/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/HTMLTrackElement.cpp.o
[12/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/HTMLVideoElement.cpp.o
[13/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/ImageBitmap.cpp.o
[14/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/ImageRequest.cpp.o
[15/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Location.cpp.o
[16/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/MessageChannel.cpp.o
[17/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/MessagePort.cpp.o
[18/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/MimeType.cpp.o
[19/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/MimeTypeArray.cpp.o
[20/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Navigable.cpp.o
[21/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/NavigableContainer.cpp.o
[22/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/NavigateEvent.cpp.o
[23/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Navigation.cpp.o
[24/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/NavigationHistoryEntry.cpp.o
[25/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/NavigationParams.cpp.o
[26/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Navigator.cpp.o
[27/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/NavigatorBeacon.cpp.o
[28/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/OffscreenCanvas.cpp.o
[29/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/OffscreenCanvasRenderingContext2D.cpp.o
[30/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Parser/HTMLEncodingDetection.cpp.o
[31/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Parser/HTMLParser.cpp.o
[32/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Path2D.cpp.o
[33/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Plugin.cpp.o
[34/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/PluginArray.cpp.o
[35/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/PopoverInvokerElement.cpp.o
[36/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Scripting/ClassicScript.cpp.o
[37/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Scripting/Environments.cpp.o
[38/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Scripting/Fetching.cpp.o
FAILED: [code=1] Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Scripting/Fetching.cpp.o 
/opt/homebrew/bin/ccache /usr/bin/c++ -DENABLE_COMPILETIME_FORMAT_CHECK -DLibWeb_EXPORTS -DSK_ALLOW_STATIC_GLOBAL_INITIALIZERS=1 -DSK_ASSUME_GL=1 -DSK_CODEC_DECODES_BMP -DSK_CODEC_DECODES_GIF -DSK_CODEC_DECODES_ICO -DSK_CODEC_DECODES_JPEG -DSK_CODEC_DECODES_PNG -DSK_CODEC_DECODES_RAW -DSK_CODEC_DECODES_WBMP -DSK_CODEC_DECODES_WEBP -DSK_ENABLE_API_AVAILABLE -DSK_ENABLE_AVX512_OPTS -DSK_ENABLE_DUMP_GPU -DSK_ENABLE_PRECOMPILE -DSK_FONTMGR_ANDROID_AVAILABLE -DSK_FONTMGR_CORETEXT_AVAILABLE -DSK_FONTMGR_FONTCONFIG_AVAILABLE -DSK_FONTMGR_FREETYPE_DIRECTORY_AVAILABLE -DSK_FONTMGR_FREETYPE_EMBEDDED_AVAILABLE -DSK_FONTMGR_FREETYPE_EMPTY_AVAILABLE -DSK_GAMMA_APPLY_TO_A8 -DSK_GANESH -DSK_GL -DSK_HAS_WUFFS_LIBRARY -DSK_METAL -DSK_SUPPORT_PDF -DSK_TRIVIAL_ABI=[[clang::trivial_abi]] -DSK_TYPEFACE_FACTORY_CORETEXT -DSK_TYPEFACE_FACTORY_FREETYPE -DSK_USE_PERFETTO -DSK_XML -I/Users/lonely/important/ladybird -I/Users/lonely/important/ladybird/Services -I/Users/lonely/important/ladybird/Libraries -I/Users/lonely/important/ladybird/Build/debug/Lagom -I/Users/lonely/important/ladybird/Build/debug/Lagom/Services -I/Users/lonely/important/ladybird/Build/debug/Lagom/Libraries -I/Users/lonely/important/ladybird/Meta/Lagom/../.. -I/Users/lonely/important/ladybird/Meta/Lagom/../../Libraries -I/Users/lonely/important/ladybird/Meta/Lagom/../../Services -I/Users/lonely/important/ladybird/Build/debug -isystem /opt/homebrew/opt/python@3.13/Frameworks/Python.framework/Versions/3.13/include/python3.13 -isystem /Users/lonely/important/ladybird/Build/debug/vcpkg_installed/arm64-osx-dynamic/include -isystem /Users/lonely/important/ladybird/Build/debug/vcpkg_installed/arm64-osx-dynamic/include/skia -isystem /Users/lonely/important/ladybird/Build/debug/vcpkg_installed/arm64-osx-dynamic/include/libxml2 -g -std=c++2b -arch arm64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX26.0.sdk -mmacosx-version-min=14.0 -fPIC -fcolor-diagnostics -march=native -Wall -Wextra -fno-exceptions -ffp-contract=off -Wcast-qual -Wformat=2 -Wimplicit-fallthrough -Wlogical-op -Wmissing-declarations -Wmissing-field-initializers -Wsuggest-override -Wno-invalid-offsetof -Wno-unknown-warning-option -Wno-unused-command-line-argument -Werror -fconstexpr-steps=16777216 -Wmissing-prototypes -Wno-implicit-const-int-float-conversion -Wno-user-defined-literals -Wno-unqualified-std-cast-call -fstack-protector-strong -fstrict-flex-arrays=2 -Wno-maybe-uninitialized -Wno-shorten-64-to-32 -fsigned-char -ggnu-pubnames -ggdb3 -Og -fvisibility=hidden -MD -MT Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Scripting/Fetching.cpp.o -MF Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Scripting/Fetching.cpp.o.d -o Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Scripting/Fetching.cpp.o -c /Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:533:33: error: use of undeclared identifier 'script'
  533 |         on_complete->function()(script);
      |                                 ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:494:62: error: lambda capture 'settings_object' is not used [-Werror,-Wunused-lambda-capture]
  494 |     fetch_algorithms_input.process_response_consume_body = [&settings_object, options = move(options), on_complete = move(on_complete)](auto response, auto body_bytes) {
      |                                                             ~^~~~~~~~~~~~~~~~
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:539:1: error: unterminated /* comment
  539 | /*
      | ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:1023:1: error: expected '}'
 1023 | 
      | ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:35:21: note: to match this '{'
   35 | namespace Web::HTML {
      |                     ^
4 errors generated.
ninja: build stopped: subcommand failed.
